vcl/osx/salinst.cxx
@@ -637,6 +637,8 @@ bool AquaSalInstance::DoYield(bool bWait, bool bHandleAllCurrentEvents)
         // Some events and timers call Application::Reschedule() or
         // Application::Yield() so don't block and wait for events when a
         // window is in live resize
+        bool bOldIsWaitingForNativeEvent = ImplGetSVData()->mpWinData->mbIsWaitingForNativeEvent;
+        ImplGetSVData()->mpWinData->mbIsWaitingForNativeEvent = !o3tl::IsRunningUnitTest();
         if( bWait && ! bHadEvent && !ImplGetSVData()->mpWinData->mbIsLiveResize )
         {
             SolarMutexReleaser aReleaser;
@@ -659,6 +661,8 @@ bool AquaSalInstance::DoYield(bool bWait, bool bHandleAllCurrentEvents)
             }
             [NSApp updateWindows];
         }
+
+        ImplGetSVData()->mpWinData->mbIsWaitingForNativeEvent = bOldIsWaitingForNativeEvent;
 
         // collect update rectangles
         for( auto pSalFrame : GetSalData()->mpInstance->getFrames() )
